riferimenti tabella in file stringhe

--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -404,5 +404,5 @@
 
     <!--    AIMI INIZIO TRADUZIONE TABELLA PLUGIN  -->
 
-
+    <string name="table_plugin_steps_title">Rilevamento passi</string>
 </resources>
