--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -420,5 +420,5 @@
 
         <!--    AIMI -----START TRANSLATION AIMI TABLE PLUGIN -----------------------  -->
 
-
+    <string name="table_plugin_steps_title">Step Data</string>
 </resources>
