riferimenti tabella in file stringhe

--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -418,7 +418,7 @@
     <string name="generic_meal_modes_preferences_title_menu">Generic Meal - Manual Mode settings</string>
     <string name="sleep_modes_preferences_title_menu">Sleep - Manual Mode - settings</string>
 
-        <!--    AIMI -----START TRANSLATION AIMI TABLE PLUGIN -----------------------  -->
+        <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
 
     <string name="table_plugin_steps_title">Step Data</string>
 </resources>
