riferimenti tabella in file stringhe

--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -404,6 +404,7 @@
 
     <!--    AIMI INIZIO TRADUZIONE TABELLA PLUGIN  -->
 
+    <string name="table_plugin_tir_title">TIR Dati</string>
     <string name="table_plugin_steps_title">Rilevamento passi</string>
     <string name="table_plugin_heart_title">Rilevamento battiti cardiaci</string>
 </resources>
