--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -419,7 +419,7 @@
     <string name="sleep_modes_preferences_title_menu">Sleep - Manual Mode - settings</string>
 
         <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
-
+    <string name="table_plugin_tir_title">TIR Data</string>
     <string name="table_plugin_steps_title">Step Data</string>
     <string name="table_plugin_heart_title">Heart Rate Data</string>
 </resources>
