--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -420,6 +420,8 @@
 
         <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
 
+    <string name="table_plugin_smb_prediction_title">SMB Prediction</string>
+    <string name="table_plugin_adjusted_factors_title">Adjusted Factors</string>
     <string name="table_plugin_limits_title">Limits & Conditions</string>
     <string name="table_plugin_glucose_title">Glucose Data</string>
     <string name="table_plugin_tir_title">TIR Data</string>
