--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -403,6 +403,9 @@
     <string name="sleep_modes_preferences_title_menu">Riposo - Modalità manuale - Impostaz.</string>
 
     <!--    AIMI INIZIO TRADUZIONE TABELLA PLUGIN  -->
+
+
+    <string name="table_plugin_smb_request_title">Richiesta</string>
     <string name="table_plugin_smb_prediction_title">SMB Previsione</string>
     <string name="table_plugin_adjusted_factors_title">Fattori aggiustati</string>
     <string name="table_plugin_limits_title">Limiti & Condizioni</string>
