--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -420,6 +420,7 @@
 
         <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
 
+    <string name="table_plugin_smb_request_title">Request</string>
     <string name="table_plugin_smb_prediction_title">SMB Prediction</string>
     <string name="table_plugin_adjusted_factors_title">Adjusted Factors</string>
     <string name="table_plugin_limits_title">Limits & Conditions</string>
