riferimenti tabella in file stringhe

--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -423,7 +423,7 @@
     <string name="table_plugin_smb_request_title">Request</string>
     <string name="table_plugin_smb_prediction_title">SMB Prediction</string>
     <string name="table_plugin_adjusted_factors_title">Adjusted Factors</string>
-    <string name="table_plugin_limits_title">Limits & Conditions</string>
+    <string name="table_plugin_limits_title">Limits and Conditions</string>
     <string name="table_plugin_glucose_title">Glucose Data</string>
     <string name="table_plugin_tir_title">TIR Data</string>
     <string name="table_plugin_steps_title">Step Data</string>
