--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -408,7 +408,7 @@
     <string name="table_plugin_smb_request_title">Richiesta</string>
     <string name="table_plugin_smb_prediction_title">SMB Previsione</string>
     <string name="table_plugin_adjusted_factors_title">Fattori aggiustati</string>
-    <string name="table_plugin_limits_title">Limiti & Condizioni</string>
+    <string name="table_plugin_limits_title">Limiti e Condizioni</string>
     <string name="table_plugin_glucose_title">Glicemia Dati</string>
     <string name="table_plugin_tir_title">TIR Dati</string>
     <string name="table_plugin_steps_title">Rilevamento passi</string>
