riferimenti tabella in file stringhe

--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -420,6 +420,9 @@
 
         <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
 
+    <string name="table_plugin_main_title_1">AAPS-MASTER-AIMI</string>
+    <string name="table_plugin_main_title_2">OpenApsAIMI Settings</string>
+    <string name="table_plugin_main_title_3">27 Avril 2025</string>
     <string name="table_plugin_request_title">Request</string>
     <string name="table_plugin_smb_prediction_title">SMB Prediction</string>
     <string name="table_plugin_adjusted_factors_title">Adjusted Factors</string>
