--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -431,5 +431,5 @@
     <string name="table_plugin_tir_title">TIR Data</string>
     <string name="table_plugin_steps_title">Step Data</string>
     <string name="table_plugin_heart_title">Heart Rate Data</string>
-
+    <string name="table_plugin_manual_modes_title">Modes</string>
 </resources>
