--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -382,11 +382,11 @@
     <string name="autodrive_max_basal_summary">Quando viene rilevato precocemente un pasto, AIMI esegue una basale fissa per 30 minuti. Inserire il valore orario di questa basale (es. 4 unità, farà 2 unità in 30 minuti)</string>
     <string name="autodrive_max_basal_title">TBR Valore rilevamento precoce pasto</string>
     <string name="user_preferences_title_menu">Profilo utente AIMI</string>
-    <string name="autodrive_preferences_title_menu">FCL - Autodrive - Rilevamento pasto autom.</string>
-    <string name="manual_modes_preferences_title_menu">HCL - Pasti/Attività manuali</string>
-    <string name="bg_under_120_preferences_title_menu"><![CDATA[Glicemia < 120 - Impostazioni]]></string>
-    <string name="bg_over_120_preferences_title_menu">Glicemia > 120 - Impostazioni</string>
-    <string name="aaps_preferences_title_menu">Sensibilità - Impostazioni AAPS</string>
+    <string name="autodrive_preferences_title_menu">Autodrive - Rilevamento pasto autom.</string>
+    <string name="manual_modes_preferences_title_menu">Pasti/Attività manuali</string>
+    <string name="bg_under_120_preferences_title_menu"><![CDATA[Glicemia < 120]]></string>
+    <string name="bg_over_120_preferences_title_menu">Glicemia > 120</string>
+    <string name="aaps_preferences_title_menu">Sensibilità AAPS</string>
     <string name="training_ml_breakfast_modes_preferences">Colazione</string>
     <string name="training_ml_lunch_modes_preferences">Pranzo</string>
     <string name="training_ml_dinner_modes_preferences">Cena</string>
