improve translation ita Autodrive menu

--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -368,19 +368,19 @@
     <string name="oaps_aimi_AutodriveISF_summary">under this ISF value, the condition to receive the prebolus is true</string>
     <string name="oaps_aimi_AutodriveISF_title">ISF value Autodrive for prebolus</string>
     <string name="OApsAIMI_CombinedDelta_summary">"Greater than value, the condition to receive the prebolus is true. "</string>
-    <string name="OApsAIMI_CombinedDelta_title">Combined Delta for autodrive prebolus</string>
+    <string name="OApsAIMI_CombinedDelta_title">Delta combinato glicemia per somministrare prebolo Autodrive</string>
     <string name="oaps_aimi_AutodriveTarget_summary">under this target the condition is true to receive the autodrive prebolus</string>
-    <string name="oaps_aimi_AutodriveTarget_title">Minimum target Autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveTarget_title">Target minimo per somministrare prebolo Autodrive</string>
     <string name="oaps_aimi_AutodriveBG_summary">Greater than this BG value, the condition is true to receive the autodrive prebolus</string>
-    <string name="oaps_aimi_AutodriveBG_title">minimum bg to recceive autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveBG_title">Glicemia minima per somministrare prebolo Autodrive</string>
     <string name="oaps_aimi_AutodriveDeviation_summary">Greater than this value, the condition is true to receive the autodrive prebolus</string>
-    <string name="oaps_aimi_AutodriveDeviation_title">Autodrive min deviation</string>
+    <string name="oaps_aimi_AutodriveDeviation_title">Deviazione minima glicemia per somministrare prebolo Autodrive</string>
     <string name="oaps_aimi_AutodriveAcceleration_summary">BG acceleration, if the acceleration is greater than this value, the condition for autodrive prebolus is true.</string>
-    <string name="oaps_aimi_AutodriveAcceleration_title">Autodrive BG acceleration condition</string>
+    <string name="oaps_aimi_AutodriveAcceleration_title">Accelerazione minima glicemia per somministrare prebolo Autodrive</string>
     <string name="prebolussmall_autodrive_mode_summary"><![CDATA[use by an early meal detection, bg > 100, predictionBG > 180. The idea is when we get a early detection sending a small smb to avoid negative iob or late correction. can be a good approach for a small snack.]]></string>
     <string name="prebolussmall_autodrive_mode_title">snack autodrive prebolus/early meal detection</string>
     <string name="autodrive_max_basal_summary">Quando viene rilevato precocemente un pasto, AIMI esegue una basale fissa per 30 minuti. Inserire il valore orario di questa basale (es. 4 unità, farà 2 unità in 30 minuti)</string>
-    <string name="autodrive_max_basal_title">TBR Valore rilevamento precoce pasto</string>
+    <string name="autodrive_max_basal_title">Massimo valore TBR U/hr quando viene rilevato un pasto</string>
     <string name="user_preferences_title_menu">Profilo utente AIMI</string>
     <string name="autodrive_preferences_title_menu">Autodrive - Rilevamento pasto autom.</string>
     <string name="manual_modes_preferences_title_menu">Pasti / Attività manuali</string>
