--- a/plugins/aps/src/main/res/values-it-rIT/strings.xml
+++ b/plugins/aps/src/main/res/values-it-rIT/strings.xml
@@ -361,7 +361,7 @@
 
     <string name="oaps_aimi_logsize_summary">log colon size</string>
     <string name="oaps_aimi_logsize_title">Numero linee tabella analisi AIMI nella scheda Loop</string>
-    <string name="Enable_xdripOM_title">xDrip BG sensore 1 minuto</string>
+    <string name="Enable_xdripOM_title">xDrip supporto BG sensore 1 minuto</string>
     <string name="oaps_aimi_enableMlautoDrive_title">SPERIMENTALE : Auto Drive FULL CLOSED LOOP</string>
     <string name="prebolus_autodrive_mode_summary">Autodrive will send a prebolus regarding the raise detection conditions</string>
     <string name="prebolus_autodrive_mode_title">Autodrive prebolus</string>
