--- a/plugins/aps/src/main/res/values-de-rDE/strings.xml
+++ b/plugins/aps/src/main/res/values-de-rDE/strings.xml
@@ -152,4 +152,67 @@
     <string name="autotune_revert_local_profile_message">%1$s Profil mit Eingabeprofil zurücksetzen?</string>
     <string name="autotune_profile_invalid">Profil ungültig</string>
     <!--    autoISF -->
+
+
+    <!--    AIMI START TRANSLATION MENU PREFERENCES   -->
+
+    <string name="oaps_aimi_enableDeleteLine_title">Enable the possibility to delete one day in the ML Training</string>
+    <string name="oaps_aimi_logsize_summary">log colon size</string>
+    <string name="oaps_aimi_logsize_title">Define the log size for the colon in loop page</string>
+    <string name="Enable_xdripOM_title">Enable xdrip bg each one minute</string>
+    <string name="oaps_aimi_enableMlautoDrive_title">Experimental : Auto Drive</string>
+    <string name="prebolus_autodrive_mode_summary">Autodrive will send a prebolus regarding the raise detection conditions</string>
+    <string name="prebolus_autodrive_mode_title">Autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveISF_summary">under this ISF value, the condition to receive the prebolus is true</string>
+    <string name="oaps_aimi_AutodriveISF_title">ISF value Autodrive for prebolus</string>
+    <string name="OApsAIMI_CombinedDelta_summary">"Greater than value, the condition to receive the prebolus is true. "</string>
+    <string name="OApsAIMI_CombinedDelta_title">Combined Delta for autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveTarget_summary">under this target the condition is true to receive the autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveTarget_title">Minimum target Autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveBG_summary">Greater than this BG value, the condition is true to receive the autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveBG_title">minimum bg to recceive autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveDeviation_summary">Greater than this value, the condition is true to receive the autodrive prebolus</string>
+    <string name="oaps_aimi_AutodriveDeviation_title">Autodrive min deviation</string>
+    <string name="oaps_aimi_AutodriveAcceleration_summary">BG acceleration, if the acceleration is greater than this value, the condition for autodrive prebolus is true.</string>
+    <string name="oaps_aimi_AutodriveAcceleration_title">Autodrive BG acceleration condition</string>
+    <string name="prebolussmall_autodrive_mode_summary"><![CDATA[use by an early meal detection, bg > 100, predictionBG > 180. The idea is when we get a early detection sending a small smb to avoid negative iob or late correction. can be a good approach for a small snack.]]></string>
+    <string name="prebolussmall_autodrive_mode_title">snack autodrive prebolus/early meal detection</string>
+    <string name="autodrive_max_basal_summary">Meal early detection, fix the maxbasal during 30 minutes</string>
+    <string name="autodrive_max_basal_title">Meal Early Detection TBR</string>
+    <string name="user_preferences_title_menu">Global User Preferences</string>
+    <string name="autodrive_preferences_title_menu">Autodrive settings</string>
+    <string name="manual_modes_preferences_title_menu">Training ML and Modes</string>
+    <string name="bg_under_120_preferences_title_menu"><![CDATA[Reactivity BG < 120]]></string>
+    <string name="bg_over_120_preferences_title_menu">High BG Preferences (BG > 120)</string>
+    <string name="aaps_preferences_title_menu">AAPS SMB Settings</string>
+    <string name="training_ml_breakfast_modes_preferences">Breakfast Mode settings</string>
+    <string name="training_ml_lunch_modes_preferences">Lunch Mode settings</string>
+    <string name="training_ml_dinner_modes_preferences">Dinner Mode settings</string>
+    <string name="training_ml_high_carb_modes_preferences">High Carb Mode settings</string>
+    <string name="training_ml_snack_modes_preferences">Snack Mode settings</string>
+    <string name="training_ml_generic_meal_modes_preferences">Generic Meal Mode settings</string>
+    <string name="training_ml_sleep_modes_preferences">Sleep Mode settings</string>
+    <string name="breakfast_modes_preferences_title_menu">Breakfast - Manual Mode settings</string>
+    <string name="lunch_modes_preferences_title_menu">Lunch - Manual Mode settings</string>
+    <string name="dinner_modes_preferences_title_menu">Dinner - Manual Mode settings</string>
+    <string name="snack_modes_preferences_title_menu">Snack - Manual Mode settings</string>
+    <string name="high_carb_modes_preferences_title_menu">High Carb - Manual Mode settings</string>
+    <string name="generic_meal_modes_preferences_title_menu">Generic Meal - Manual Mode settings</string>
+    <string name="sleep_modes_preferences_title_menu">Sleep - Manual Mode - settings</string>
+
+    <!--    AIMI START TRANSLATION AIMI TABLE PLUGIN -->
+
+    <string name="table_plugin_main_title_1">AAPS-MASTER-AIMI</string>
+    <string name="table_plugin_main_title_2">OpenApsAIMI Settings</string>
+    <string name="table_plugin_main_title_3">30 April 2025</string>
+    <string name="table_plugin_request_title">Request</string>
+    <string name="table_plugin_smb_prediction_title">SMB Prediction</string>
+    <string name="table_plugin_adjusted_factors_title">Adjusted Factors</string>
+    <string name="table_plugin_limits_title">Limits and Conditions</string>
+    <string name="table_plugin_glucose_title">Glucose Data</string>
+    <string name="table_plugin_tir_title">TIR Data</string>
+    <string name="table_plugin_steps_title">Step Data</string>
+    <string name="table_plugin_heart_title">Heart Rate Data</string>
+    <string name="table_plugin_manual_modes_title">Modes</string>
+    <string name="table_plugin_miscellaneous_title">Miscellaneous</string>
 </resources>
