--- a/plugins/aps/src/main/res/values/strings.xml
+++ b/plugins/aps/src/main/res/values/strings.xml
@@ -226,7 +226,7 @@
     <string name="openapsama_iob_threshold_percent_summary" formatted="false">Percentage of maxIOB above which SMBs are disabled.\nDefault value: 100%\nWith 100% this feature is effectively disabled.</string>
     <string name="openapsama_iob_threshold_percent">maxIOB threshold percent for SMB\n(iob_threshold_percent)</string>
 
-    <!-- AIMI START TRANSLATION CORE --->
+    <!-- AIMI START TRANSLATION CORE -->
 
     <string name="key_openapsaimi_settings">key_openapsaimi_settings</string>
     <string name="openapsaimi">"AIMI 3.3"</string>
